--- a/Pharmacy/Pharmacy.PresentationLayer/package.json
+++ b/Pharmacy/Pharmacy.PresentationLayer/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "presentation-layer",
+  "name": "pharmacy.presentation-layer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
-  "description": "PresentationLayer",
+  "description": "Pharmacy.PresentationLayer",
   "author": {
     "name": ""
   },
