--- a/Pharmacy/Pharmacy.WebApi/appsettings.Development.json
+++ b/Pharmacy/Pharmacy.WebApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "PharmacyDatabase": "secret"
   }
 }
