--- a/Pharmacy/Pharmacy.DataAccessLayer/Pharmacy.DataAccessLayer.csproj
+++ b/Pharmacy/Pharmacy.DataAccessLayer/Pharmacy.DataAccessLayer.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pharmacy.BusinessLayer\Pharmacy.BusinessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
